--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "apache-server-configs": "^2.7.1",
     "browser-sync": "^1.3.0",
     "del": "^0.1.2",
+    "grunt": "^0.4.5",
+    "grunt-ftpush": "^0.3.3",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^0.0.8",
     "gulp-cache": "^0.2.2",
@@ -10,8 +12,10 @@
     "gulp-csso": "^0.2.9",
     "gulp-flatten": "^0.0.2",
     "gulp-ftp": "^1.0.1",
+    "gulp-grunt": "^0.5.2",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^1.0.0",
+    "gulp-inline-source": "^1.1.0",
     "gulp-jshint": "^1.6.3",
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-html": "^0.1.4",
@@ -20,14 +24,16 @@
     "gulp-sass": "^1.2.4",
     "gulp-size": "^1.0.0",
     "gulp-uglify": "^0.3.1",
-    "gulp-uncss": "^0.4.5",
+    "gulp-uncss": "^0.5.1",
     "gulp-useref": "^0.6.0",
     "gulp-util": "^3.0.1",
+    "jit-grunt": "^0.5.0",
     "jshint-stylish": "^0.4.0",
     "opn": "^1.0.0",
     "psi": "^0.1.2",
     "require-dir": "^0.1.0",
-    "run-sequence": "^0.3.6"
+    "run-sequence": "^0.3.6",
+    "time-grunt": "~0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
